# fcitx5-predict-ja

./: .gitignore  README.md  start.sh  test-api.sh  test-e2e-dbus.py
addon/: CMakeLists.txt
addon/src/: http-client.cpp  http-client.h  input-state-machine.cpp  input-state-machine.h  llm-ime-addon.conf  llm-ime-engine.cpp  llm-ime.conf
addon/test/: test-state-machine.cpp
daemon/: pom.xml
daemon/src/main/java/com/scivicslab/predict/ja/: Analyzer.java  ContinuationService.java  Curator.java  DaemonConfig.java  EntryFilter.java  InputMonitor.java  KnowledgeBase.java  LlmConsoleSource.java  LlmEnricher.java  MozcClient.java  MozcDictWriter.java  MozcProtobufCodec.java  PredictDaemon.java  QualityTracker.java  ReadingResolver.java  RecordHandler.java
daemon/src/test/java/com/scivicslab/predict/ja/: AnalyzerTest.java  ContinuationServiceTest.java  EntryFilterTest.java  KnowledgeBaseTest.java  LlmConsoleSourceTest.java  LlmEnricherTest.java  MozcDictWriterTest.java  MozcProtobufCodecTest.java  PredictDaemonUtilTest.java  ReadingResolverTest.java  RecordHandlerTest.java
docs/: keybinding-spec.md
plugin/: CMakeLists.txt
plugin/src/: predict-ja-notifier-addon.conf  predict-ja-notifier.cpp
