cmake_minimum_required(VERSION 3.16)
project(fcitx5-llm-ime VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(PkgConfig REQUIRED)
find_package(Fcitx5Core REQUIRED)
find_package(Fcitx5Module REQUIRED COMPONENTS Notifications)
find_package(CURL REQUIRED)
find_package(nlohmann_json 3.2 REQUIRED)
find_package(Threads REQUIRED)

# fcitx5 addon install directory
include(GNUInstallDirs)
# Use fcitx5 macro to get addon install dir
set(FCITX_INSTALL_PKGDATADIR "${CMAKE_INSTALL_PREFIX}/share/fcitx5")
set(FCITX_INSTALL_ADDONDIR "${FCITX_INSTALL_PKGDATADIR}/addon")
set(FCITX_INSTALL_LIBDIR "${CMAKE_INSTALL_PREFIX}/lib/fcitx5")

add_library(llm-ime MODULE
    src/llm-ime-engine.cpp
    src/http-client.cpp
)

target_link_libraries(llm-ime
    Fcitx5::Core
    CURL::libcurl
    nlohmann_json::nlohmann_json
    Threads::Threads
)

target_include_directories(llm-ime PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)

set_target_properties(llm-ime PROPERTIES
    PREFIX ""
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Install
install(TARGETS llm-ime DESTINATION "${FCITX_INSTALL_LIBDIR}")
install(FILES src/llm-ime-addon.conf DESTINATION "${FCITX_INSTALL_ADDONDIR}" RENAME llm-ime.conf)
install(FILES src/llm-ime.conf DESTINATION "${FCITX_INSTALL_PKGDATADIR}/inputmethod" RENAME llm-ime.conf)
